Fix profile image centering on mobile and add circuit diameter news
Use Bootstrap responsive float utility (float-sm-right) so the profile
image is not floated on small screens, fixing the centering issue.
Add news item for the polynomial circuit diameter conjecture preprint.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -294,12 +294,16 @@ ul.task-list input[type="checkbox"] {
   }
 }
 
-.profile.float-right {
-  margin-left: 1rem;
+.profile.float-sm-right {
+  @media (min-width: 576px) {
+    margin-left: 1rem;
+  }
 }
 
-.profile.float-left {
-  margin-right: 1rem;
+.profile.float-sm-left {
+  @media (min-width: 576px) {
+    margin-right: 1rem;
+  }
 }
 
 @media (min-width: 576px) {
@@ -317,7 +321,6 @@ ul.task-list input[type="checkbox"] {
 
 @media (max-width: 575px) {
   .profile {
-    float: none !important;
     width: 100%;
     margin: 0 auto 1rem auto;
     text-align: center;
